--- a/my-app/src/components/header/Header.css
+++ b/my-app/src/components/header/Header.css
@@ -1,4 +1,10 @@
-.header {
+/* My CSS */
+li {
+    display: inline;
+}
+
+/* CSS from Lab */
+.Header {
     overflow: hidden;
     background-color: #05386b;
     padding: 20px 10px;
@@ -7,7 +13,7 @@
     width: 100%;
 }
 
-.header a {
+.Header a {
     float: left;
     color: white;
     text-align: center;
@@ -16,65 +22,35 @@
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
-
 }
 
-.header img {
+.Header img {
     width: 80px;
     float: left;
 }
 
-.header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-}
-
-.header a.active {
+.Header a.active {
     background: #5CDB95;
     color: white;
     font-weight: bold;
 }
 
-.header-right {
-    float: right;
-}
-
-.header .search-container {
-    float: left;
-}
-
-.header input[type=text] {
+.Header input[type=text] {
     padding: 6px;
     margin-top: 8px;
-    font-size: 14px;
+    font-size: 18px;
     border: none;
-}
-
-.header .search-container button {
-    float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 32px;
-    background: #ddd;
-    font-size: 14px;
-    border: none;
-    cursor: pointer;
-}
-
-.header .search-container button:hover {
-    background: #ccc;
 }
 
 @media screen and (max-width: 600px) {
 
-    .header img{
+    .Header img{
         display: block;
         float: none;
         margin: auto;
     }
 
-    .header a {
+    .Header a {
         float: none;
         display: block;
         text-align: center;
