Added custom lists to home page layout

--- a/my-app/src/components/homePage/customListRecipes/CustomListRecipes.css
+++ b/my-app/src/components/homePage/customListRecipes/CustomListRecipes.css
@@ -1,9 +1,9 @@
-.MostRecentRecipes {
+.CustomListRecipes {
     border-style: solid;
     margin: 20px;
     padding: 10px;
 }
 
-.MostRecentRecipes li {
+.CustomListRecipes li {
     display:inline;
 }
