--- a/my-app/src/components/createRecipe/CreateRecipe.css
+++ b/my-app/src/components/createRecipe/CreateRecipe.css
@@ -1,14 +1,9 @@
 .CreateRecipe {
-    display: 'flex';
-    justify-content: 'center';
+    border-style: solid;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
 }
 
-form {
-    display: inline-block;
-}
-
-label {
-    display: inline-block;
-    width: 140px;
-    text-align: left;
+.center {
 }
