--- a/my-app/src/components/recipe/recipeContent/RecipeContent.css
+++ b/my-app/src/components/recipe/recipeContent/RecipeContent.css
@@ -1,4 +1,5 @@
-.RecipeContent {
-    border-style: dashed;
-    background-color: aqua;
+.recipeContent {
+    background-color: rgba(82, 228, 191, 0.562);
+    margin: 20px;
+    padding: 10px;
 }
