--- a/my-app/src/components/homePage/card/Card.css
+++ b/my-app/src/components/homePage/card/Card.css
@@ -2,7 +2,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-   
+    align-content: center;
 }
 
 .card:hover {
@@ -13,9 +13,12 @@ img {
     border-radius: 5px 5px 0 0;
 }
 
-.container {
-    padding: 2px 16px;
+.cardImage {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
 }
+
 .linkButton {
     background:none!important;
     color:inherit;
