--- a/my-app/src/components/header/Header.css
+++ b/my-app/src/components/header/Header.css
@@ -1,6 +1,17 @@
 /* My CSS */
 .Header li {
     display: inline;
+    font-size: 400pt;
+}
+
+.navigationMenu {
+    margin-top: 5%;
+    margin-left: 20%;
+}
+
+.searchBoxContainer {
+    float: right;
+    margin-right: 5%;
 }
 
 /* CSS from Lab */
