--- a/my-app/src/components/homePage/card/Card.css
+++ b/my-app/src/components/homePage/card/Card.css
@@ -1,7 +1,7 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.5);
     transition: 0.3s;
-    border-radius: 5px;
+    border-radius: 30px;
     align-content: center;
 }
 
