--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1500px;
+  max-width: 75%;
   margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
