--- a/src/components/recipe/recipeContent/RecipeContent.css
+++ b/src/components/recipe/recipeContent/RecipeContent.css
@@ -2,4 +2,7 @@
     background-color: rgba(82, 228, 191, 0.562);
     margin: 20px;
     padding: 10px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
