--- a/src/components/recipe/recipeHeader/RecipeHeader.css
+++ b/src/components/recipe/recipeHeader/RecipeHeader.css
@@ -3,6 +3,9 @@
     margin: 20px;
     padding: 10px;
     padding-bottom: 100px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .RecipeInfo {
