--- a/src/components/recipe/recipeHeader/RecipeHeader.css
+++ b/src/components/recipe/recipeHeader/RecipeHeader.css
@@ -6,14 +6,21 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .RecipeInfo {
     width: 70%;
+    margin-top: 2%;
     float: left;
 }
 
 .RecipeImage {
     width: 30%;
     float: right;
+    margin-top: 2%;
+}
+
+.RecipeDescription {
+    margin-top: 10%;
 }
